--- a/src/style.css
+++ b/src/style.css
@@ -3,46 +3,114 @@ body {
     background-color: aqua;
     height: 100%;
     box-sizing: border-box;
+    font-family: 'Cairo', sans-serif;
 }
 
 header {
     height: 864px;
-    background-color: blue;
+    background: url(../public/images/header-img.png) no-repeat center center fixed; 
+    background-size: cover;
 }
 
 nav {
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
     color: white;
-    margin: 30px 0 0 280px;
-    border-bottom: 1px solid rgba(255, 255, 255, .25);
+    text-shadow: 0px 0px 20px #242424;
+    margin: 0 280px;
+    padding-top: 30px;
 }
 
-h1 { 
+a {
+    cursor: pointer;
+    text-decoration: none;
+}
+
+h1 {
+    font-size: 64px;
+    margin: 0;
+}
+
+h4 {
+    font-size: 16px;
+    margin-top: 10px;
+}
+
+.nav-left {
+    margin-right: 40px;
+}
+
+.nav-left-top {
+    display: flex;
+    border-bottom: 1px solid rgba(255, 255, 255, .25);
+    padding: 0px 800px 30px 0; 
+}
+
+.nav-link { 
     font-size: 18px;
     margin-right: 60px;
-    cursor: pointer;
+    color:#FFFFFF;
+}
+
+.nav-left-bottom {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.logo {
+    height: 52px;
+}
+
+.swiper {
+    width: 100%;
+    height: 400px; 
+    margin: 200px 0 0 280px;
 }
 
 .swiper-slide {
-    margin-left: 0;
+    margin: 0;
     display: flex;
-   flex-direction: column;
-  }
+    align-items: flex-end;
+    color:#FFFFFF;
+    text-shadow: 0px 0px 20px #242424;
+}
+
+.swiper-slide-left {
+    display: flex;
+    flex-direction: column;
+    align-self:flex-start;
+}
 
 .swiper-pagination {
-  text-align: left;
-  padding-left: 15px;
+	position: absolute;
+	width: auto !important;
+	margin: 0;
 }
-
-.swiper-pagination .swiper-pagination-bullet {
-  width: 9px;
-  height: 9px;
-  margin-right: 20px !important;
+.swiper-pagination-bullet {
+	border-radius: 0;
+	width: 60px;
+	height: 5px;
+	text-align: center;
+	line-height: 30px;
+	font-size: 12px;
+	color:#000;
+	opacity: 1;
+	background: #FFFFFF;
 }
-
 .swiper-pagination-bullet-active {
-  border: 1px solid black;
-  background-color: #FFFFFF;
+	color:#ffffff;
+	background: #3369D3;
+}
+
+.slider-bmw-logo {
+    width: 48px;
+}
+
+.trial-btn {
+    background-color: #3369D3;
+    padding: 15px 90px;
+    margin-left: 100px;
+    color:#FFFFFF;
+    border: none;
+    font-size: 18px;
+    height: 80px;
 }
