--- a/src/style.css
+++ b/src/style.css
@@ -166,8 +166,7 @@ button {
 .reveal.active{
     transform: translateY(0);
     opacity: 1;
-  }
-
+}
 
 .bmw-info-img1 {
     grid-row: 2 / span 1;
@@ -184,12 +183,18 @@ button {
     grid-row: 1 / span 2;
     display: grid;
     grid-template-columns: 190px 190px 190px;
-    grid-template-rows: 108px 220px 200px auto;
+    grid-template-rows: 120px 220px 200px auto;
     gap: 30px;  
+}
+
+.svg-el {
+    width: 300px;
+    height: 30px;
 }
 
 .bmw-info-box-title {
     grid-column: 1 / span 3;
+    margin: 0;
 }
 
 .bmw-info-box-id {
