--- a/src/style.css
+++ b/src/style.css
@@ -8,8 +8,6 @@ body {
 
 header {
     height: 864px;
-    background: url(../public/images/header-img.png) no-repeat center center fixed; 
-    background-size: cover;
     font-family: 'Cairo', sans-serif;
 }
 
@@ -23,8 +21,13 @@ button {
 }
 
 a:hover, button:hover {
-  transform: scale(1.1);
+  transform: scale(1.02);
   transition: all 100ms;
+}
+
+a:active, button:active {
+    transform: scale(0.99);
+    transition: all 100ms;
 }
 
 h1 {
@@ -72,6 +75,8 @@ button {
     text-shadow: 0px 0px 20px #242424;
     margin: 0 280px;
     padding-top: 30px;
+    position: relative;
+    z-index: 100;
 }
 
 .nav-left {
@@ -101,8 +106,10 @@ button {
 
 .swiper {
     width: 100%;
-    height: 400px; 
-    margin: 200px 0 0 280px;
+    height: 864px;
+    position: absolute;
+        top: 0;
+    z-index: 10;
 }
 
 .swiper-slide {
@@ -110,19 +117,39 @@ button {
     display: flex;
     align-items: flex-end;
     color:#FFFFFF;
-    text-shadow: 0px 0px 20px #242424;
+    background-size: cover; 
+}
+
+#slide1 {
+    background-image:
+    linear-gradient(90deg, #000000a8 0%, #00000000 100%),
+    url(../public/images/header-img.png); 
+    background-size: cover; 
+}
+
+#slide2 {
+    background-image:
+    linear-gradient(90deg, #000000a8 0%, #00000000 100%),
+    url(../public/images/header-img2.jpg);
+}
+
+#slide3 {
+    background-image:
+    linear-gradient(90deg, #000000a8 0%, #00000000 100%),
+    url(../public/images/header-img3.jpg);
 }
 
 .swiper-slide-left {
     display: flex;
     flex-direction: column;
     align-self: flex-start;
+    margin: 340px 0 0 280px;
 }
 
 .swiper-pagination {
 	position: absolute;
 	width: auto !important;
-	margin: 0;
+	margin: 0 0 60px 280px;
 }
 .swiper-pagination-bullet {
 	border-radius: 0;
@@ -141,11 +168,12 @@ button {
 }
 
 .slider-bmw-logo {
-    width: 48px;
+    width: 80px;
 }
 
 .trial-btn {
     margin-left: 100px;
+    margin-bottom: 60px;
 }
 
 .facts-section {
